[package]
name = "mdbook-fs-summary"
version = "0.1.2"
edition = "2021"
authors = ["Peter Sooley"]
description = "Summary generator for mdbook"
repository = "https://github.com/elmdash/mdbook-fs-summary.git"
homepage = "https://crates.io/crates/mdbook-fs-summary"
documentation = "https://crates.io/crates/mdbook-fs-summary"
license = "MIT"
readme = "README.md"
keywords = ["mdbook", "summary", "markdown", "static"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
mdbook = { version = "0.4.14", default-features = false }
semver = "1.0.4"
serde_json = "1.0.73"
